# Ironclaw-2

./: .gitignore  04-agent-specification.md  agent_plan.md
agent/: Cargo.toml
agent/crates/ironclaw-agent/: Cargo.toml
agent/crates/ironclaw-agent/src/: agent.rs  main.rs
agent/crates/ironclaw-collector/: Cargo.toml
agent/crates/ironclaw-collector/src/: lib.rs  simulator.rs  win_util.rs  windows_eventlog.rs  windows_powershell.rs  windows_sysmon.rs
agent/crates/ironclaw-core/: Cargo.toml
agent/crates/ironclaw-core/src/: config.rs  error.rs  event.rs  identity.rs  lib.rs  policy.rs  risk.rs
agent/crates/ironclaw-transport/: Cargo.toml
agent/crates/ironclaw-transport/src/: batch.rs  buffer.rs  http.rs  lib.rs
