[workspace]
members = [
    "crates/ironclaw-core",
    "crates/ironclaw-collector",
    "crates/ironclaw-transport",
    "crates/ironclaw-agent",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Dev A"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (rustls — no OpenSSL dependency, works on Windows cross-compile)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# System info
hostname = "0.4"
sysinfo = "0.30"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Compression
zstd = "0.13"

# Async channels / watch
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# SQLite for local event store
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
