[package]
name = "ironclaw-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "IRONCLAW telemetry collectors — Sysmon, Security Log, PowerShell, Simulator"

[dependencies]
ironclaw-core = { path = "../ironclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

# Windows-only: Event Log APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Registry",
] }
